--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,4 +1,6 @@
 homepage: "https://gtm-server.com/"
 versions:
+  - sha: 7c3b0f7ff92880ce3a83dbf5f4eca315e468e2a4
+    changeNotes: Move transformation logic to the web.
   - sha: e927adb13b807eb375c07553da418f592be51e1e
     changeNotes: Initial release.
