--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,7 @@
 homepage: "https://stape.io/"
 versions:
+  - sha: a88f51afe94db1f5e5a97ebe5cf251fc0cb444c9
+    changeNotes: Add client_id generation functionality.
   - sha: 28b7b5dc4dfca58555fd15fff3fefe18b7b49762
     changeNotes: Add data store functionality.
   - sha: 713fbe32cc954debebd9f145de8c9224ce75e110
