--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,7 @@
 homepage: "https://stape.io/"
 versions:
+  - sha: e11b7b68f8160fd6cc6d210daef907e25b4670cf
+    changeNotes: Fix issue with gAds user data.
   - sha: f6511e191159a89583452d7ff2e97700069cec1c
     changeNotes: Add Matomo support.
   - sha: 199507c3b10f3acb51c6ce307129792fb07d9700
