--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,7 @@
 homepage: "https://stape.io/"
 versions:
+  - sha: 4d9f4d4fbded5414cb091efac70224d31c522e5c
+    changeNotes: Fix user address data.
   - sha: 905af50fe8eb5f61e58a6d04c33fd6faf01e7f98
     changeNotes: user_data persistence fix.
   - sha: e11b7b68f8160fd6cc6d210daef907e25b4670cf
