--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,7 @@
 homepage: "https://stape.io/"
 versions:
+  - sha: 953bf24c77b68e708fee1e953eea31303bf1fde1
+    changeNotes: Fix for timestamp and unique_event_id override.
   - sha: a9fb729fd9eed2013188c00e820fa81aa78e71c1
     changeNotes: Fixed location response header bug.
   - sha: e31d2f39c10285cbc5169e349c473f73e4668692
